--- a/src/compose-test/.env
+++ b/src/compose-test/.env
@@ -1,4 +1,4 @@
 SERVICECONTROL_TAG=$SERVICECONTROL_TAG
 TRANSPORTTYPE=$TRANSPORTTYPE
 CONNECTIONSTRING="$CONNECTIONSTRING"
-AWS_ENDPOINT_URL=http://transport:4566
+AWS_ENDPOINT_URL=http://localstack:4566
