--- a/src/ServiceControl/App.config
+++ b/src/ServiceControl/App.config
@@ -20,6 +20,7 @@ These settings are only here so that we can debug ServiceControl while developin
     <!--<add key="ServiceControl/TransportType" value="NetStandardAzureServiceBus" />-->
     <!--<add key="ServiceControl/TransportType" value="RabbitMQ.QuorumConventionalRouting" />-->
     <!--<add key="ServiceControl/TransportType" value="SQLServer" />-->
+    <!--<add key="ServiceControl/TransportType" value="PostgreSQL" />-->
 
     <add key="ServiceControl/PersistenceType" value="RavenDB" />
   </appSettings>
@@ -47,5 +48,8 @@ These settings are only here so that we can debug ServiceControl while developin
 
     <!--SQLServer -->
     <!--<add name="NServiceBus/Transport" connectionString="Data Source=;Initial Catalog=nservicebus;Integrated Security=True;Queue Schema=myschema;Subscriptions Table=tablename@schema@catalog" />-->
+    
+    <!--PostgreSQL -->
+    <!--<add name="NServiceBus/Transport" connectionString="Server=;Database=nservicebus;Port=5432;User Id=;Password=;Ssl Mode=Require;" />-->
   </connectionStrings>
 </configuration>
