Container integration test (#4438)
* Container integration test

* Use MinVer action

* Simplifications using compose merge

* don't double up

* Add services top-level element

* Fixes, remove fake transport container concept

* Use includes

* Back to merge but matrix the full command

* Back to merge

* Inherit secrets

* Docs and tweaks

* Few more notes

* Rename folder

* readme name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,3 +126,9 @@ jobs:
     if: ${{ github.actor != 'dependabot[bot]' }}
     uses: ./.github/workflows/build-db-container.yml
     secrets: inherit
+  # See /src/container-integration-test/README.md
+  container-test:
+    if: ${{ github.actor != 'dependabot[bot]' }}
+    needs: [ 'containers', 'db-container' ]
+    uses: ./.github/workflows/container-integration-test.yml
+    secrets: inherit
