--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -48,7 +48,8 @@
     <PackageVersion Include="NServiceBus.Transport.Msmq.Sources" Version="3.0.1" />
     <PackageVersion Include="NServiceBus.Transport.SqlServer" Version="8.1.3" />
     <PackageVersion Include="NServiceBus.Transport.PostgreSql" Version="8.1.3" />
-    <PackageVersion Include="NuGet.Versioning" Version="6.11.0" />
+    <PackageVersion Include="Npgsql" Version="8.0.3" />
+    <PackageVersion Include="NuGet.Versioning" Version="6.11.0" />    
     <PackageVersion Include="NUnit" Version="4.2.2" />
     <PackageVersion Include="NUnit.Analyzers" Version="4.3.0" />
     <PackageVersion Include="NUnit3TestAdapter" Version="4.6.0" />
