Update eslint and a few other packages

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:mocks": "cross-env NODE_ENV=dev-mocks vite",
     "build": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
+    "lint": "eslint .",
     "preview": "vite preview",
     "test:component": "vitest ./src",
     "test:coverage": "vitest run --coverage",
@@ -17,8 +17,8 @@
     "test:application": "npm run test:application:vitest"
   },
   "dependencies": {
-    "@tinyhttp/content-disposition": "^2.2.1",
-    "@vue-flow/core": "^1.41.0",
+    "@tinyhttp/content-disposition": "^2.2.2",
+    "@vue-flow/core": "^1.41.1",
     "@wdns/vue-code-block": "^2.3.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -26,45 +26,42 @@
     "memoize-one": "^6.0.0",
     "moment": "^2.30.1",
     "pinia": "^2.2.2",
-    "vue": "^3.4.38",
-    "vue-router": "^4.4.4",
+    "vue": "^3.5.5",
+    "vue-router": "^4.4.5",
     "vue-tippy": "^6.4.4",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-cookies": "^1.0.6",
     "vue3-simple-typeahead": "^1.0.11"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@pinia/testing": "^0.1.5",
-    "@rushstack/eslint-patch": "^1.10.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/user-event": "^14.5.2",
     "@testing-library/vue": "^8.1.0",
     "@tsconfig/node18": "^18.2.4",
     "@types/bootstrap": "^5.2.10",
-    "@types/node": "^20.14.12",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-vue": "^5.1.3",
-    "@vitest/coverage-v8": "^2.0.5",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^13.0.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^22.5.5",
+    "@vitejs/plugin-vue": "^5.1.2",
+    "@vitest/coverage-v8": "^2.1.1",
     "@vue/tsconfig": "^0.5.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.0",
-    "eslint-plugin-github": "^5.0.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-unused-imports": "^3.2.0",
-    "eslint-plugin-vue": "^9.27.0",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.28.0",
     "flush-promises": "^1.0.2",
-    "jsdom": "^24.1.1",
-    "msw": "^2.4.4",
+    "globals": "^15.9.0",
+    "jsdom": "^25.0.0",
+    "msw": "^2.4.7",
     "prettier": "^3.3.3",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.3",
-    "vite-plugin-checker": "^0.7.2",
-    "vitest": "^2.0.3",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.5.0",
+    "vite": "^5.4.5",
+    "vite-plugin-checker": "^0.8.0",
+    "vitest": "^2.1.1",
     "vue-tsc": "^2.0.29"
   },
   "msw": {
