--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^7.1.0",
     "eslint-plugin-vue": "^9.28.0",
     "flush-promises": "^1.0.2",
     "globals": "^15.9.0",
