--- a/src/ServiceControl.Audit/App.config
+++ b/src/ServiceControl.Audit/App.config
@@ -17,7 +17,7 @@ These settings are only here so that we can debug ServiceControl while developin
     <!--<add key="ServiceControl.Audit/TransportType" value="NetStandardAzureServiceBus" />-->
     <!--<add key="ServiceControl.Audit/TransportType" value="RabbitMQ.QuorumConventionalRouting" />-->
     <!--<add key="ServiceControl.Audit/TransportType" value="SQLServer" />-->
-    <!--<add key="ServiceControl.Audit/TransportType" value="PostgreSQL" />-->
+    <add key="ServiceControl.Audit/TransportType" value="PostgreSQL" />
 
     <!-- DEVS - Pick a persistence to run Auditing instance on. -->
     <add key="ServiceControl.Audit/PersistenceType" value="InMemory" />
@@ -28,7 +28,7 @@ These settings are only here so that we can debug ServiceControl while developin
 
     <!-- Learning -->
     <!-- If the LearningTransport connectionString is empty, it will default to the solution directory when running/debugging from the IDE -->
-    <add name="NServiceBus/Transport" connectionString="" />
+    <!--<add name="NServiceBus/Transport" connectionString="" />-->
 
     <!--Amazon SQS -->
     <!--<add name="NServiceBus/Transport" connectionString="Region=;QueueNamePrefix=;TopicNamePrefix=;AccessKeyId=;SecretAccessKey=;S3BucketForLargeMessages=;S3KeyPrefix=" />-->
@@ -49,6 +49,6 @@ These settings are only here so that we can debug ServiceControl while developin
     <!--<add name="NServiceBus/Transport" connectionString="Data Source=;Initial Catalog=nservicebus;Integrated Security=True;Queue Schema=myschema;Subscriptions Table=tablename@schema@catalog" />-->
 
     <!--PostgreSQL -->
-    <!--<add name="NServiceBus/Transport" connectionString="Server=;Database=nservicebus;Port=5432;User Id=;Password=;Ssl Mode=Require;" />-->
+    <!--<add name="NServiceBus/Transport" connectionString="Server=;Database=nservicebus;Port=5432;User Id=;Password=;" />-->
   </connectionStrings>
 </configuration>
