--- a/.github/workflows/container-integration-test.yml
+++ b/.github/workflows/container-integration-test.yml
@@ -24,7 +24,8 @@ jobs:
             expected-healthy-containers: 5
           - name: postgresql
             transport: PostgreSQL
-            compose-cmd: docker compose -f servicecontrol.yml up -d
+            connection-string: 'Host=postgres;Port=5432;Database=servicecontrol;User ID=sc;Password=ServiceControl1!;Pooling=true;Connection Lifetime=0;'
+            compose-cmd: docker compose -f servicecontrol.yml -f postgres.yml up -d
             expected-healthy-containers: 5
           - name: asb
             transport: NetStandardAzureServiceBus
@@ -57,7 +58,7 @@ jobs:
       - name: Log in to GitHub container registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Azure Login
-        if: ${{ matrix.name == 'asb' || matrix.name == 'asq' || matrix.name == 'postgresql' }}
+        if: ${{ matrix.name == 'asb' || matrix.name == 'asq' }}
         uses: azure/login@v2.2.0
         with:
           creds: ${{ secrets.AZURE_ACI_CREDENTIALS }}
@@ -75,14 +76,6 @@ jobs:
           connection-string-name: CONNECTIONSTRING
           azure-credentials: ${{ secrets.AZURE_ACI_CREDENTIALS }}
           tag: ServiceControlContainerTest
-      - name: Setup PostgreSQL
-        uses: Particular/setup-postgres-action@v1.0.0
-        if: matrix.name == 'postgresql'
-        with:          
-          connection-string-name: CONNECTIONSTRING
-          tag: ServiceControl
-          registry-username: ${{ secrets.DOCKERHUB_USERNAME }}
-          registry-password: ${{ secrets.DOCKERHUB_TOKEN }}            
       - name: Run Docker Compose
         shell: pwsh
         env:
