--- a/src/container-integration-test/postgres.yml
+++ b/src/container-integration-test/postgres.yml
@@ -8,7 +8,7 @@ services:
       - "5432:5432"
     environment:
       POSTGRES_USER: sc
-      POSTGRES_PASSWORD: ServiceControl1
+      POSTGRES_PASSWORD: ServiceControl1!
     volumes:
       - local_pgdata:/var/lib/postgresql/data
     command: --max-prepared-transactions=105
