--- a/src/container-integration-test/postgres.yml
+++ b/src/container-integration-test/postgres.yml
@@ -9,6 +9,11 @@ services:
       POSTGRES_USER: sc
       POSTGRES_PASSWORD: ServiceControl1!
     command: --max-prepared-transactions=105
+    healthcheck:
+      test: ["CMD-SHELL", "psql -U sc -d postgres -c 'SELECT 1' || exit 1"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
 
   # Add service health dependencies to ServiceControl instances
   servicecontrol:
