--- a/src/container-integration-test/postgres.yml
+++ b/src/container-integration-test/postgres.yml
@@ -2,7 +2,7 @@ services:
 
   postgres:
     image: postgres
-    restart: always
+    restart: unless-stopped
     ports:
       - "5432:5432"
     environment:
