Fix app.config transport connection strings

--- a/src/ServiceControl.Monitoring/App.config
+++ b/src/ServiceControl.Monitoring/App.config
@@ -29,7 +29,7 @@ These settings are only here so that we can debug ServiceControl while developin
     <!--<add name="NServiceBus/Transport" connectionString="Region=;QueueNamePrefix=;TopicNamePrefix=;AccessKeyId=;SecretAccessKey=;S3BucketForLargeMessages=;S3KeyPrefix=" />-->
 
     <!--AzureStorageQueue -->
-    <!--<add name="DefaultEndpointsProtocol=[http|https];AccountName=;AccountKey=;Subscriptions Table=tablename" />-->
+    <!--<add name="NServiceBus/Transport" connectionString="DefaultEndpointsProtocol=[http|https];AccountName=;AccountKey=;Subscriptions Table=tablename" />-->
 
     <!--MSMQ -->
     <!--<add name="NServiceBus/Transport" connectionString="" />-->
@@ -38,9 +38,9 @@ These settings are only here so that we can debug ServiceControl while developin
     <!--<add name="NServiceBus/Transport" connectionString="Endpoint=sb://[namespace].servicebus.windows.net; SharedSecretIssuer=;SharedSecretValue=;QueueLengthQueryDelayInterval=;TopicName=default-is-bundle-1" />-->
 
     <!--RabbitMQ.QuorumConventionalRouting -->
-    <!--<add name="host=;username=;password=;DisableRemoteCertificateValidation=true|false>;UseExternalAuthMechanism=true|false" />-->
+    <!--<add name="NServiceBus/Transport" connectionString="host=;username=;password=" />-->
 
     <!--SQLServer -->
-    <!--<add name="NServiceBus/Transport" connectionString="Data Source=<SQLInstance>;Initial Catalog=nservicebus;Integrated Security=True;Queue Schema=myschema;Subscriptions Table=tablename@schema@catalog" />-->
+    <!--<add name="NServiceBus/Transport" connectionString="Data Source=;Initial Catalog=nservicebus;Integrated Security=True;Queue Schema=myschema;Subscriptions Table=tablename@schema@catalog" />-->
   </connectionStrings>
 </configuration>
